Initial Harman HiQnet dissector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -783,6 +783,7 @@ if(ENABLE_PLUGINS)
 		plugins/docsis
 		plugins/ethercat
 		plugins/gryphon
+		plugins/hiqnet
 		plugins/irda
 		plugins/m2m
 		plugins/mate
