--- a/Makefile.am
+++ b/Makefile.am
@@ -288,6 +288,7 @@ plugin_ldadd = $(_CUSTOM_plugin_ldadd_) \
 	-dlopen plugins/docsis/docsis.la \
 	-dlopen plugins/ethercat/ethercat.la \
 	-dlopen plugins/gryphon/gryphon.la \
+        -dlopen plugins/hiqnet/hiqnet.la \
 	-dlopen plugins/irda/irda.la \
 	-dlopen plugins/m2m/m2m.la \
 	-dlopen plugins/mate/mate.la \
