--- a/packaging/nsis/Makefile.nmake
+++ b/packaging/nsis/Makefile.nmake
@@ -46,6 +46,7 @@ PLUGINS= \
 	../../plugins/docsis/docsis.dll \
 	../../plugins/ethercat/ethercat.dll \
 	../../plugins/gryphon/gryphon.dll \
+	../../plugins/hiqnet/hiqnet.dll \
 	../../plugins/irda/irda.dll \
 	../../plugins/m2m/m2m.dll \
 	../../plugins/mate/mate.dll \
