Initial Harman HiQnet dissector
Change-Id: I43042edde09395e328d84bf4b172465829915a98

--- a/epan/CMakeLists.txt
+++ b/epan/CMakeLists.txt
@@ -765,6 +765,7 @@ set(DISSECTOR_SRC
 	dissectors/packet-hdfsdata.c
 	dissectors/packet-hdmi.c
 	dissectors/packet-hip.c
+	dissectors/packet-hiqnet.c
 	dissectors/packet-hislip.c
 	dissectors/packet-homeplug-av.c
 	dissectors/packet-homeplug.c
