--- a/epan/dissectors/Makefile.common
+++ b/epan/dissectors/Makefile.common
@@ -680,6 +680,7 @@ DISSECTOR_SRC = \
 	packet-hdfsdata.c	\
 	packet-hdmi.c		\
 	packet-hip.c		\
+	packet-hiqnet.c \
 	packet-hislip.c		\
 	packet-homeplug-av.c	\
 	packet-homeplug.c	\
